--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar">
   HoloStats
-  <button mat-button routerLink="/subs">訂閱</button>
+  <button mat-button routerLink="/vtuber">訂閱</button>
   <button mat-button routerLink="/stream">同接</button>
   <span class="spacer"></span>
   <ng-content></ng-content>
