--- a/web/src/app/vtubers-detail/_vtubers-detail.theme.scss
+++ b/web/src/app/vtubers-detail/_vtubers-detail.theme.scss
@@ -1,12 +1,16 @@
 @import "~@angular/material/theming";
 
-@mixin subs-detail-theme($theme) {
+@mixin vtubers-detail-theme($theme) {
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
   .ngx-charts {
     .tick {
       fill: mat-color($foreground, secondary-text);
+    }
+
+    .gridline-path {
+      stroke: mat-color($foreground, divider);
     }
   }
 }
