--- a/web/src/app/vtubers/_vtubers.theme.scss
+++ b/web/src/app/vtubers/_vtubers.theme.scss
@@ -1,6 +1,6 @@
 @import "~@angular/material/theming";
 
-@mixin subs-theme($theme) {
+@mixin vtubers-theme($theme) {
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
