--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -2,8 +2,8 @@
 
 @import "./theme";
 @import "./app/area-chart/area-chart.theme";
-@import "./app/subs-detail/subs-detail.theme";
-@import "./app/subs/subs.theme";
+@import "./app/vtubers/vtubers.theme";
+@import "./app/vtubers-detail/vtubers-detail.theme";
 
 @include mat-core();
 
@@ -19,9 +19,10 @@
 @include mat-progress-spinner-theme($light-theme);
 @include mat-table-theme($light-theme);
 @include mat-tree-theme($light-theme);
-@include subs-theme($light-theme);
-@include subs-detail-theme($light-theme);
+
 @include area-chart-theme($light-theme);
+@include vtubers-theme($light-theme);
+@include vtubers-detail-theme($light-theme);
 
 .dark {
   @include mat-badge-theme($dark-theme);
@@ -36,9 +37,10 @@
   @include mat-progress-spinner-theme($dark-theme);
   @include mat-table-theme($dark-theme);
   @include mat-tree-theme($dark-theme);
-  @include subs-theme($dark-theme);
-  @include subs-detail-theme($dark-theme);
+
   @include area-chart-theme($dark-theme);
+  @include vtubers-theme($dark-theme);
+  @include vtubers-detail-theme($dark-theme);
 }
 
 body {
