--- a/web/src/app/area-chart/area-chart.component.scss
+++ b/web/src/app/area-chart/area-chart.component.scss
@@ -6,3 +6,8 @@ $config: mat-typography-config();
   font-size: mat-font-size($config, caption);
   font-weight: mat-font-weight($config, body-2);
 }
+
+.chart {
+  display: grid;
+  height: 100%;
+}
