--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -48,9 +48,11 @@ body {
   padding: 0;
   margin: 0;
   background-color: mat-color(map-get($light-theme, background), "card");
+  color: mat-color(map-get($light-theme, foreground), text);
 
   &.dark {
     background-color: mat-color(map-get($dark-theme, background), "card");
+    color: mat-color(map-get($dark-theme, foreground), text);
   }
 }
 
@@ -64,6 +66,11 @@ $config: mat-typography-config();
 .ngx-charts {
   .tick {
     font-size: mat-font-size($config, caption);
+    font-weight: mat-font-weight($config, body-2);
+  }
+
+  .x.axis {
+    font-size: mat-font-size($config, body-1);
     font-weight: mat-font-weight($config, body-2);
   }
 }
