feat(web): new settings page

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <button mat-button routerLink="/stream">同接</button>
   <span class="spacer"></span>
   <ng-content></ng-content>
-  <button mat-icon-button (click)="openSettings()">
+  <button mat-icon-button routerLink="/settings">
     <mat-icon>settings</mat-icon>
   </button>
 </mat-toolbar>
