--- a/web/src/app/settings/settings.component.html
+++ b/web/src/app/settings/settings.component.html
@@ -1,6 +1,24 @@
-<h1 mat-dialog-title>VTuber 列表 ({{ ids.length }}/{{ count }})</h1>
+<mat-toolbar class="navbar">
+  <button mat-icon-button (click)="backClicked()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
+  设置
+</mat-toolbar>
 
-<div mat-dialog-content>
+<h4 class="settings-row mat-subheading-2" fxLayout="row">
+  切換夜間模式
+  <span class="spacer"></span>
+  <mat-slide-toggle
+    [checked]="enableDarkMode"
+    (toggleChange)="toggleDarkTheme()"
+  ></mat-slide-toggle>
+</h4>
+
+<h4 class="settings-row mat-subheading-2">
+  已選取的 VTuber <b>({{ ids.length }}/{{ count }})</b>
+</h4>
+
+<div class="tree-row">
   <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
       <button mat-icon-button disabled></button>
@@ -30,9 +48,4 @@
       </mat-checkbox>
     </mat-tree-node>
   </mat-tree>
-</div>
-
-<div class="dialog-actions" mat-dialog-actions>
-  <button mat-button mat-dialog-close>關閉</button>
-  <button mat-button color="accent" (click)="applyChange()">確定</button>
 </div>
