feat(web): finish streams & streams-detail pages

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="navbar">
-  HoloStats
-  <button mat-button routerLink="/vtuber">訂閱 / 播放</button>
+  <mat-icon class="logo" svgIcon="holo-stats"></mat-icon>
+  <button mat-button routerLink="/vtuber">訂閱</button>
   <button mat-button routerLink="/stream">同接</button>
   <span class="spacer"></span>
   <ng-content></ng-content>
