--- a/web/src/app/settings/settings.component.scss
+++ b/web/src/app/settings/settings.component.scss
@@ -11,3 +11,13 @@
   padding: 0 20px;
   margin: 0px;
 }
+
+.navbar {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.dark {
+  .navbar {
+    background-color: rgba(0, 0, 0, 0);
+  }
+}
