--- a/web/src/app/vtubers/vtubers.component.html
+++ b/web/src/app/vtubers/vtubers.component.html
@@ -1,7 +1,7 @@
 <div class="sticky">
   <hs-navbar>
     <span class="updated-at">
-      截至 <b>{{ updatedAt | date: "yyyy/MM/dd HH:mm" }}</b>
+      更新于 <b>{{ updatedAt | date: "MM/dd HH:mm" }}</b>
     </span>
   </hs-navbar>
 </div>
