feat(web): use svg icon

--- a/web/src/app/navbar/navbar.component.html
+++ b/web/src/app/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="navbar">
-  <mat-icon class="logo" svgIcon="holo-stats"></mat-icon>
+  <mat-icon class="logo" svgIcon="logo"></mat-icon>
   <button mat-button routerLink="/vtuber">訂閱</button>
   <button mat-button routerLink="/stream">同接</button>
   <span class="spacer"></span>
   <ng-content></ng-content>
   <button mat-icon-button routerLink="/settings">
-    <mat-icon>settings</mat-icon>
+    <mat-icon svgIcon="settings"></mat-icon>
   </button>
 </mat-toolbar>
