--- a/web/src/app/streams/streams.component.html
+++ b/web/src/app/streams/streams.component.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="viewers" fxLayout="row" fxLayoutAlign="start center">
-        <mat-icon class="view-icon">remove_red_eye</mat-icon>
+        <mat-icon class="view-icon" svgIcon="eye"></mat-icon>
         <span title="平均同接 / 最高同接">
           {{ (stream.avgViewers | number) || " ---- " }} /
           {{ (stream.maxViewers | number) || " ---- " }}
