--- a/web/src/app/vtubers/_vtubers.theme.scss
+++ b/web/src/app/vtubers/_vtubers.theme.scss
@@ -13,20 +13,24 @@
   }
 }
 
-.red.mat-cell, .red.mat-footer-cell {
+.red.mat-cell,
+.red.mat-footer-cell {
   color: #b00020;
 }
 
-.green.mat-cell, .green.mat-footer-cell {
+.green.mat-cell,
+.green.mat-footer-cell {
   color: #2e7d32;
 }
 
 .dark {
-.red.mat-cell, .red.mat-footer-cell {
-  color: #ef9a9a;
-}
+  .red.mat-cell,
+  .red.mat-footer-cell {
+    color: #ef9a9a;
+  }
 
-.green.mat-cell, .green.mat-footer-cell {
-  color: #81c784;
-}
+  .green.mat-cell,
+  .green.mat-footer-cell {
+    color: #81c784;
+  }
 }
