--- a/web/src/app/vtubers/vtubers.component.html
+++ b/web/src/app/vtubers/vtubers.component.html
@@ -1,8 +1,6 @@
 <div class="sticky">
   <hs-navbar>
-    <span class="updated-at">
-      更新于 <b>{{ updatedAt | date: "MM/dd HH:mm" }}</b>
-    </span>
+    <span class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</span>
   </hs-navbar>
 </div>
 <table
