feat(web): styling

--- a/web/src/app/area-chart/area-chart.component.html
+++ b/web/src/app/area-chart/area-chart.component.html
@@ -1,6 +1,6 @@
 <ngx-charts-area-chart
   class="chart"
-  [autoScale]="true"
+  [autoScale]="autoScale"
   [scheme]="youtube ? youtubeScheme : bilibiliScheme"
   [results]="results"
   [gradient]="true"
@@ -11,6 +11,8 @@
   [yAxisTickFormatting]="numTickFormatting"
   [legend]="false"
   [xAxisLabel]="label"
+  [xScaleMax]="xScaleMax"
+  [xScaleMin]="xScaleMin"
   [showXAxisLabel]="!!label"
   [showYAxisLabel]="false"
   [roundDomains]="true"
