--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -1,16 +1,19 @@
-<hs-navbar></hs-navbar>
-
 <ng-container *ngIf="stats.length != 0">
   <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
-    <div class="title" title="{{ stream.title }}">
+    <a class="title" href="https://youtu.be/{{ stream.id }}">
       {{ stream.title }}
-    </div>
-    <div class="info" fxFlex="55" fxFlex.lt-sm="100">
+    </a>
+    <a
+      class="info"
+      fxFlex="55"
+      fxFlex.lt-sm="100"
+      href="https://youtu.be/{{ stream.id }}"
+    >
       <img
         class="cover"
         src="https://img.youtube.com/vi/{{ stream.id }}/maxresdefault.jpg"
       />
-    </div>
+    </a>
     <div
       class="number"
       fxFlex="45"
@@ -18,6 +21,16 @@
       fxLayout="column"
       fxLayoutAlign="space-around"
     >
+      <div
+        fxLayoutAlign="center center"
+        *ngIf="findVTuber(stream.vtuberId); let vtuber"
+      >
+        <img
+          class="profile"
+          src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
+        />
+        <span class="name">{{ vtuber.name }}</span>
+      </div>
       <div fxLayout="row" fxLayoutAlign="space-around">
         <div flex="50">
           <div class="value">
@@ -53,29 +66,15 @@
       </div>
     </div>
     <div fxFlex="100" class="chart">
-      <ngx-charts-line-chart
-        [scheme]="youtubeColorScheme"
+      <hs-area-chart
+        [youtube]="true"
         [results]="stats"
-        [gradient]="true"
-        [xAxis]="true"
-        [yAxis]="true"
         [xAxisTicks]="xAxisTicks"
-        [xAxisTickFormatting]="dateTickFormatting"
-        [legend]="false"
-        [showXAxisLabel]="false"
-        [showYAxisLabel]="false"
-        [roundDomains]="true"
-      >
-        <ng-template #tooltipTemplate let-model="model">
-          <p>{{ model.name * 1000 | date: "MM/dd HH:mm:ss" }}</p>
-          <p>{{ model.value | number }} 同接</p>
-        </ng-template>
-
-        <ng-template #seriesTooltipTemplate let-model="model">
-          <p>{{ model[0].name * 1000 | date: "MM/dd HH:mm:ss" }}</p>
-          <p>{{ model[0].value | number }} 同接</p>
-        </ng-template>
-      </ngx-charts-line-chart>
+        [dateTickFormatting]="dateTickFormatting"
+        [autoScale]="false"
+        [xScaleMax]="xScaleMax"
+        [xScaleMin]="xScaleMin"
+      ></hs-area-chart>
     </div>
   </div>
 </ng-container>
