--- a/web/src/app/streams-detail/streams-detail.component.scss
+++ b/web/src/app/streams-detail/streams-detail.component.scss
@@ -7,10 +7,23 @@ $config: mat-typography-config();
   padding: 24px;
 }
 
+.profile {
+  padding-right: 8px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+.name {
+  font-size: mat-font-size($config, body-2);
+  font-weight: mat-font-weight($config, body-2);
+}
+
 .title {
   font-size: mat-font-size($config, title);
   font-weight: mat-font-weight($config, title);
   padding-bottom: 12px;
+  text-decoration: none;
 }
 
 .info {
@@ -26,7 +39,7 @@ $config: mat-typography-config();
   text-align: center;
 
   .value {
-    font-size: mat-font-size($config, display-1);
+    font-size: mat-font-size($config, headline);
     font-weight: mat-font-weight($config, display-1);
   }
 
