--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -1,7 +1,5 @@
-<hs-navbar></hs-navbar>
-
 <ng-container *ngIf="vtuber">
-  <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between">
+  <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="info" fxFlex="40" fxFlex.lt-sm="100">
       <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
       <div class="name">{{ vtuber.name }}</div>
@@ -40,6 +38,7 @@
         [results]="youtubeSubs"
         [xAxisTicks]="xAxisTicks"
         [label]="'YouTube 訂閱'"
+        [xScaleMin]="xScaleMin"
       ></hs-area-chart>
     </div>
 
@@ -49,6 +48,7 @@
         [results]="bilibiliSubs"
         [xAxisTicks]="xAxisTicks"
         [label]="'Bilibili 訂閱'"
+        [xScaleMin]="xScaleMin"
       ></hs-area-chart>
     </div>
 
@@ -58,6 +58,7 @@
         [results]="youtubeViews"
         [xAxisTicks]="xAxisTicks"
         [label]="'YouTube 播放'"
+        [xScaleMin]="xScaleMin"
       ></hs-area-chart>
     </div>
 
@@ -67,6 +68,7 @@
         [results]="bilibiliViews"
         [xAxisTicks]="xAxisTicks"
         [label]="'Bilibili 播放'"
+        [xScaleMin]="xScaleMin"
       ></hs-area-chart>
     </div>
   </div>
