--- a/web/src/app/vtubers/vtubers.component.scss
+++ b/web/src/app/vtubers/vtubers.component.scss
@@ -11,6 +11,8 @@ $config: mat-typography-config();
 .updated-at {
   font-size: mat-font-size($config, caption);
   font-weight: mat-font-weight($config, caption);
+  text-align: right;
+  padding: 8px 16px;
 }
 
 table {
@@ -23,6 +25,8 @@ table {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.12);
   cursor: pointer;
+  vertical-align: middle;
+  outline: none;
 }
 
 .mat-column-profile {
