refactor(web): cleanup

--- a/web/src/app/area-chart/area-chart.component.html
+++ b/web/src/app/area-chart/area-chart.component.html
@@ -16,6 +16,7 @@
   [showXAxisLabel]="!!label"
   [showYAxisLabel]="false"
   [roundDomains]="true"
+  [timeline]="timeline"
 >
   <ng-template #tooltipTemplate let-model="model">
     <p class="tooltip-caption">
