--- a/web/src/app/streams/streams.component.scss
+++ b/web/src/app/streams/streams.component.scss
@@ -75,13 +75,16 @@ $config: mat-typography-config();
     margin: 4px;
   }
 
+  .name {
+    padding-left: 4px;
+  }
+
   .name:after {
     content: "•";
     margin: 4px;
   }
 
   .profile {
-    padding-right: 4px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
