--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -32,11 +32,14 @@
         </div>
       </div>
     </div>
+  </div>
+  <div fxLayout="row wrap" fxLayoutAlign="space-between">
     <div class="chart" fxFlex="50" fxFlex.lt-md="100">
       <hs-area-chart
         [youtube]="true"
         [results]="youtubeSubs"
         [xAxisTicks]="xAxisTicks"
+        [dateTickFormatting]="dateTickFormatting"
         [label]="'YouTube 訂閱'"
         [xScaleMin]="xScaleMin"
       ></hs-area-chart>
@@ -47,6 +50,7 @@
         [youtube]="false"
         [results]="bilibiliSubs"
         [xAxisTicks]="xAxisTicks"
+        [dateTickFormatting]="dateTickFormatting"
         [label]="'Bilibili 訂閱'"
         [xScaleMin]="xScaleMin"
       ></hs-area-chart>
@@ -57,6 +61,7 @@
         [youtube]="true"
         [results]="youtubeViews"
         [xAxisTicks]="xAxisTicks"
+        [dateTickFormatting]="dateTickFormatting"
         [label]="'YouTube 播放'"
         [xScaleMin]="xScaleMin"
       ></hs-area-chart>
@@ -67,6 +72,7 @@
         [youtube]="false"
         [results]="bilibiliViews"
         [xAxisTicks]="xAxisTicks"
+        [dateTickFormatting]="dateTickFormatting"
         [label]="'Bilibili 播放'"
         [xScaleMin]="xScaleMin"
       ></hs-area-chart>
